--- a/index.html
+++ b/index.html
@@ -9,33 +9,31 @@
 </head>
 
 <body>
-    <h1>Notable Mathematicians</h1>
+    <h1>Fruits</h1>
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12">
             <section class="lebesgue">
-                <h2>Henri Lebesgue</h2>
+                <h2>Apple</h2>
                 <p>
-                    Henri Lebesgue was born on 28 June 1875 in Beauvais, Oise. Lebesgue's father was a typesetter and his mother was a school teacher. His parents assembled at home a library that the young Henri was able to use. His father died of tuberculosis when Lebesgue
-                    was still very young and his mother had to support him by herself. As he showed a remarkable talent for mathematics in primary school, one of his instructors arranged for community support to continue his education at the Collège de
-                    Beauvais and then at Lycée Saint-Louis and Lycée Louis-le-Grand in Paris.
+                    Apples are rich in dietary fiber and Vitamin C. Apple comes in variety of colours like red, green and golden. Their tastes also vary as some apples are sweet and some are tangy. In India, Kashmir and Himachal are the main areas which are famous for apple
+                    production.
                 </p>
             </section>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
             <section class="fubini">
-                <h2>Guido Fubini</h2>
+                <h2>Banana</h2>
                 <p>
-                    Born in Venice, he was steered towards mathematics at an early age by his teachers and his father, who was himself a teacher of mathematics. In 1896 he entered the Scuola Normale Superiore di Pisa, where he studied under the notable mathematicians Ulisse
-                    Dini and Luigi Bianchi. He gained some early fame when his 1900 doctoral thesis, entitled Clifford's parallelism in elliptic spaces, was discussed in a widely read work on differential geometry published by Bianchi in 1902.
+                    Banana is one of the most commonly eaten fruit in the whole world. This is a favorite and nutritional fruit. (2) Banana is yellow colored fruit. But the raw banana is green in color, and after ripping, its color changes to yellow.
                 </p>
             </section>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12">
             <section class="luzin">
-                <h2>Nikolai Luzin</h2>
+                <h2>Orange</h2>
                 <p>
-                    Nikolai Nikolaevich Luzin (also spelled Lusin; 9 December 1883 - 28 January 1950) was a Soviet/Russian mathematician known for his work in descriptive set theory and aspects of mathematical analysis with strong connections to point-set topology. He was
-                    the eponym of Luzitania, a loose group of young Moscow mathematicians of the first half of the 1920s. They adopted his set-theoretic orientation, and went on to apply it in other areas of mathematics.
+                    Oranges are round orange-coloured fruit that grow on a tree which can reach 10 metres (33 ft) high. Orange trees have dark green shiny leaves and small white flowers with five petals. The flowers smell very sweet which attracts many bees. An orange has
+                    a tough shiny orange skin that holds acid in outside layer.
                 </p>
             </section>
         </div>
